--- a/CSS/PicWild.css
+++ b/CSS/PicWild.css
@@ -86,14 +86,14 @@ body{
 
 #logo {
 	display: inline;
-	padding: 5px 2px 10px 10px;
+	padding: 0px 0px 0px 8px;
 	vertical-align: middle;
 }
 
 #page_paragraph {
-	display: inline;
+	display: initial;
 	vertical-align: middle;
-	font-size: 30px;
+	font-size: 28px;
 	font-family: chiller;
 	text-shadow: 2px 2px 2px #008000;
 }
