--- a/CSS/PicWild.css
+++ b/CSS/PicWild.css
@@ -84,12 +84,12 @@ body{
      color: black;
 }
 
-#logo {
+/*#logo {
 	display: inline;
 	padding: 0px 0px 0px 8px;
 	vertical-align: middle;
 }
-
+*/
 #page_paragraph {
 	display: initial;
 	vertical-align: middle;
